// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExchangeHomeScreen renders and behaves correctly for CP-DOTO restricted countries 1`] = `
<RNCSafeAreaView
  edges={
    Array [
      "top",
    ]
  }
  style={
    Object {
      "flex": 1,
      "justifyContent": "space-between",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "borderBottomColor": 0,
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "flexShrink": 1,
        "justifyContent": "center",
        "minHeight": 56,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 10,
          "left": 10,
          "right": 10,
          "top": 10,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "left": 0,
            "marginBottom": 0,
            "marginLeft": 16,
            "padding": 0,
            "position": "absolute",
          },
          Object {
            "opacity": 1,
          },
        ]
      }
    >
      <svg
        fill="none"
        height="32"
        testID="Hamburger"
        viewBox="0 0 32 32"
        width="32"
      >
        <line
          stroke="#2E3338"
          strokeLinecap="round"
          strokeWidth="2.5"
          x1="7.25"
          x2="24.75"
          y1="9.75"
          y2="9.75"
        />
        <line
          stroke="#2E3338"
          strokeLinecap="round"
          strokeWidth="2.5"
          x1="7.25"
          x2="24.75"
          y1="15.75"
          y2="15.75"
        />
        <line
          stroke="#2E3338"
          strokeLinecap="round"
          strokeWidth="2.5"
          x1="7.25"
          x2="24.75"
          y1="21.75"
          y2="21.75"
        />
      </svg>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
          },
          Object {
            "opacity": AnimatedValue {
              " __value": 0,
            },
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "#2E3338",
            "fontFamily": "Inter-Medium",
            "fontSize": 16,
            "lineHeight": 22,
          }
        }
      >
        $9.09
      </Text>
    </View>
  </View>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "flexGrow": 1,
        "paddingBottom": 16,
      }
    }
    scrollEventThrottle={16}
    stickyHeaderIndices={Array []}
    testID="ExchangeScrollView"
  >
    <RNCSafeAreaView
      edges={
        Array [
          "bottom",
        ]
      }
      style={
        Object {
          "flex": 1,
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          Object {
            "padding": 16,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "marginBottom": 8,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Jost-Medium",
                "fontSize": 22,
                "lineHeight": 28,
                "marginRight": 8,
              }
            }
          >
            goldPrice
          </Text>
          <View
            accessible={true}
            focusable={true}
            hitSlop={
              Object {
                "bottom": 10,
                "left": 10,
                "right": 10,
                "top": 10,
              }
            }
            nativeBackgroundAndroid={
              Object {
                "attribute": "selectableItemBackground",
                "rippleRadius": undefined,
                "type": "ThemeAttrAndroid",
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <svg
              fill="none"
              height={14}
              viewBox="0 0 16 16"
              width={14}
            >
              <circle
                cx="8"
                cy="8"
                r="7"
                stroke="#2E3338"
                strokeWidth="1.25"
              />
              <path
                d="M8 12V7M8 6V5"
                stroke="#2E3338"
                strokeWidth="1.25"
              />
            </svg>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "flex-end",
              "flexDirection": "row",
              "flexWrap": "wrap",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Regular",
                "fontSize": 24,
                "lineHeight": 27,
                "minHeight": 27,
              }
            }
          >
            $9.09
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "height": 217.5,
            "justifyContent": "center",
            "width": 750,
          }
        }
      >
        <ActivityIndicator
          color="#EEB93C"
          size="large"
        />
      </View>
      <View
        style={
          Array [
            Object {
              "flexDirection": "column",
            },
            Object {
              "marginBottom": 16,
              "marginHorizontal": 16,
              "marginTop": 24,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 100,
              },
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            nativeBackgroundAndroid={
              Object {
                "attribute": "selectableItemBackground",
                "rippleRadius": undefined,
                "type": "ThemeAttrAndroid",
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#EEB93C",
                "flexGrow": 1,
                "height": 48,
                "justifyContent": "center",
                "opacity": undefined,
                "paddingHorizontal": 24,
                "paddingVertical": 5,
              }
            }
            testID="WithdrawCELO"
          >
            <Text
              maxFontSizeMultiplier={1}
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 16,
                  "lineHeight": 22,
                }
              }
            >
              withdrawCelo
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#EDEEEF",
            "height": 1,
            "marginHorizontal": 16,
          }
        }
      />
      <View
        style={
          Object {
            "marginVertical": 16,
            "paddingHorizontal": 16,
          }
        }
        testID="ExchangeAccountOverview"
      >
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Jost-Medium",
              "fontSize": 22,
              "lineHeight": 28,
              "marginBottom": 8,
            }
          }
        >
          yourGoldBalance
        </Text>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 24,
              "lineHeight": 27,
              "marginBottom": 8,
            }
          }
          testID="CeloBalance"
        >
          <Text
            style={
              Array [
                undefined,
                Object {
                  "color": undefined,
                },
              ]
            }
            testID="undefined/value"
          >
            
            
            2.000
          </Text>
        </Text>
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          Equal to 
          <Text
            style={
              Array [
                undefined,
                Object {
                  "color": undefined,
                },
              ]
            }
            testID="undefined/value"
          >
            
            ₱
            6.00
          </Text>
        </Text>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#EDEEEF",
            "height": 1,
            "marginHorizontal": 16,
          }
        }
      />
      <View
        style={
          Object {
            "paddingBottom": 8,
            "paddingHorizontal": 16,
            "paddingTop": 20,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Jost-Medium",
              "fontSize": 22,
              "lineHeight": 28,
            }
          }
        >
          activity
        </Text>
      </View>
      <TransactionsList
        feedType="exchange"
      />
    </RNCSafeAreaView>
  </RCTScrollView>
</RNCSafeAreaView>
`;

exports[`ExchangeHomeScreen renders and behaves correctly for non CP-DOTO restricted countries 1`] = `
<RNCSafeAreaView
  edges={
    Array [
      "top",
    ]
  }
  style={
    Object {
      "flex": 1,
      "justifyContent": "space-between",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "borderBottomColor": 0,
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "flexShrink": 1,
        "justifyContent": "center",
        "minHeight": 56,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 10,
          "left": 10,
          "right": 10,
          "top": 10,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "left": 0,
            "marginBottom": 0,
            "marginLeft": 16,
            "padding": 0,
            "position": "absolute",
          },
          Object {
            "opacity": 1,
          },
        ]
      }
    >
      <svg
        fill="none"
        height="32"
        testID="Hamburger"
        viewBox="0 0 32 32"
        width="32"
      >
        <line
          stroke="#2E3338"
          strokeLinecap="round"
          strokeWidth="2.5"
          x1="7.25"
          x2="24.75"
          y1="9.75"
          y2="9.75"
        />
        <line
          stroke="#2E3338"
          strokeLinecap="round"
          strokeWidth="2.5"
          x1="7.25"
          x2="24.75"
          y1="15.75"
          y2="15.75"
        />
        <line
          stroke="#2E3338"
          strokeLinecap="round"
          strokeWidth="2.5"
          x1="7.25"
          x2="24.75"
          y1="21.75"
          y2="21.75"
        />
      </svg>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
          },
          Object {
            "opacity": AnimatedValue {
              " __value": 0,
            },
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "#2E3338",
            "fontFamily": "Inter-Medium",
            "fontSize": 16,
            "lineHeight": 22,
          }
        }
      >
        $9.09
      </Text>
    </View>
  </View>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "flexGrow": 1,
        "paddingBottom": 16,
      }
    }
    scrollEventThrottle={16}
    stickyHeaderIndices={Array []}
    testID="ExchangeScrollView"
  >
    <RNCSafeAreaView
      edges={
        Array [
          "bottom",
        ]
      }
      style={
        Object {
          "flex": 1,
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          Object {
            "padding": 16,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "marginBottom": 8,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Jost-Medium",
                "fontSize": 22,
                "lineHeight": 28,
                "marginRight": 8,
              }
            }
          >
            goldPrice
          </Text>
          <View
            accessible={true}
            focusable={true}
            hitSlop={
              Object {
                "bottom": 10,
                "left": 10,
                "right": 10,
                "top": 10,
              }
            }
            nativeBackgroundAndroid={
              Object {
                "attribute": "selectableItemBackground",
                "rippleRadius": undefined,
                "type": "ThemeAttrAndroid",
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <svg
              fill="none"
              height={14}
              viewBox="0 0 16 16"
              width={14}
            >
              <circle
                cx="8"
                cy="8"
                r="7"
                stroke="#2E3338"
                strokeWidth="1.25"
              />
              <path
                d="M8 12V7M8 6V5"
                stroke="#2E3338"
                strokeWidth="1.25"
              />
            </svg>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "flex-end",
              "flexDirection": "row",
              "flexWrap": "wrap",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Regular",
                "fontSize": 24,
                "lineHeight": 27,
                "minHeight": 27,
              }
            }
          >
            $9.09
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "height": 217.5,
            "justifyContent": "center",
            "width": 750,
          }
        }
      >
        <ActivityIndicator
          color="#EEB93C"
          size="large"
        />
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginBottom": 28,
            "marginHorizontal": 12,
            "marginTop": 24,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "flexDirection": "column",
              },
              Object {
                "flex": 1,
                "marginHorizontal": 4,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "borderRadius": 100,
                },
              ]
            }
          >
            <View
              accessible={true}
              focusable={true}
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackground",
                  "rippleRadius": undefined,
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#EEB93C",
                  "flexGrow": 1,
                  "height": 48,
                  "justifyContent": "center",
                  "opacity": undefined,
                  "paddingHorizontal": 24,
                  "paddingVertical": 5,
                }
              }
              testID="BuyCelo"
            >
              <Text
                maxFontSizeMultiplier={1}
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  }
                }
              >
                buy
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "flexDirection": "column",
              },
              Object {
                "flex": 1,
                "marginHorizontal": 4,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "borderRadius": 100,
                },
              ]
            }
          >
            <View
              accessible={true}
              focusable={true}
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackground",
                  "rippleRadius": undefined,
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#EEB93C",
                  "flexGrow": 1,
                  "height": 48,
                  "justifyContent": "center",
                  "opacity": undefined,
                  "paddingHorizontal": 24,
                  "paddingVertical": 5,
                }
              }
              testID="SellCelo"
            >
              <Text
                maxFontSizeMultiplier={1}
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  }
                }
              >
                sell
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#EDEEEF",
            "height": 1,
            "marginHorizontal": 16,
          }
        }
      />
      <View
        style={
          Object {
            "marginVertical": 16,
            "paddingHorizontal": 16,
          }
        }
        testID="ExchangeAccountOverview"
      >
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Jost-Medium",
              "fontSize": 22,
              "lineHeight": 28,
              "marginBottom": 8,
            }
          }
        >
          yourGoldBalance
        </Text>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 24,
              "lineHeight": 27,
              "marginBottom": 8,
            }
          }
          testID="CeloBalance"
        >
          <Text
            style={
              Array [
                undefined,
                Object {
                  "color": undefined,
                },
              ]
            }
            testID="undefined/value"
          >
            
            
            2.000
          </Text>
        </Text>
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          Equal to 
          <Text
            style={
              Array [
                undefined,
                Object {
                  "color": undefined,
                },
              ]
            }
            testID="undefined/value"
          >
            
            ₱
            6.00
          </Text>
        </Text>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#EDEEEF",
            "height": 1,
            "marginHorizontal": 16,
          }
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "#FFFFFF",
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackgroundBorderless",
              "rippleRadius": undefined,
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          testID="WithdrawCELO"
        >
          <View
            style={
              Object {
                "borderBottomColor": "#EDEEEF",
                "borderBottomWidth": 1,
                "marginLeft": 16,
                "paddingVertical": 16,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "paddingRight": 16,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "justifyContent": "center",
                    },
                  ]
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "lineHeight": 22,
                    }
                  }
                >
                  withdrawCelo
                </Text>
              </View>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <svg
                  fill="none"
                  height={16}
                  style={Object {}}
                  testID="ForwardChevron"
                  viewBox="0 0 8 16"
                  width={8}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clipRule="evenodd"
                    d="M.293.293a1 1 0 0 1 1.414 0l6 6a1 1 0 0 1 0 1.414l-6 6a1 1 0 0 1-1.414-1.414L5.586 7 .293 1.707a1 1 0 0 1 0-1.414Z"
                    fill="#2E3338"
                    fillRule="evenodd"
                    style={Object {}}
                  />
                </svg>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "paddingBottom": 8,
            "paddingHorizontal": 16,
            "paddingTop": 20,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Jost-Medium",
              "fontSize": 22,
              "lineHeight": 28,
            }
          }
        >
          activity
        </Text>
      </View>
      <TransactionsList
        feedType="exchange"
      />
    </RNCSafeAreaView>
  </RCTScrollView>
</RNCSafeAreaView>
`;
